crates/hir-ty/tests/snapshots/jls_release_api__later_class_at_10_is_reported.snap
---
source: crates/hir-ty/tests/jls_release_api.rs
expression: out
---
FILE /src/com/example/LaterUse.java:
package com.example;

class LaterUse {
    java.util.Later l;
}

@3:4: api-not-supported-in-release: class 'java.util.Later' is not supported in release 10 (added in release 11)
