crates/hir-ty/tests/snapshots/jls_release_api__later_class_import_at_8_is_reported.snap
---
source: crates/hir-ty/tests/jls_release_api.rs
expression: out
---
FILE /src/com/example/Imported.java:
package com.example;

import java.util.Later;

class Imported {}

@2:0: api-not-supported-in-release: class 'java.util.Later' is not supported in release 8 (added in release 11)
