crates/hir-ty/tests/snapshots/jls_release_api__member_of_an_untracked_class_reports_nothing.snap
---
source: crates/hir-ty/tests/jls_release_api.rs
expression: out
---
FILE /src/com/example/AbsentUse.java:
package com.example;

class AbsentUse {
    void f(java.util.Absent a) {
        a.toString();
    }
}
