crates/hir-ty/tests/snapshots/jls_release_api__members_added_later_at_8_are_reported.snap
---
source: crates/hir-ty/tests/jls_release_api.rs
expression: out
---
FILE /src/com/example/ApiUse.java:
package com.example;

class ApiUse {
    void f(java.util.Api a) {
        a.newer();
        String s = java.util.Api.FIELD;
        java.util.Api b = new java.util.Api(1);
    }
}

@4:8: api-not-supported-in-release: method 'newer()' in 'java.util.Api' is not supported in release 8 (added in release 11)
@5:19: api-not-supported-in-release: field 'FIELD' in 'java.util.Api' is not supported in release 8 (added in release 11)
@6:26: api-not-supported-in-release: constructor 'Api(int)' in 'java.util.Api' is not supported in release 8 (added in release 11)
