crates/hir-ty/tests/snapshots/jls_release_api__members_at_11_are_clean.snap
---
source: crates/hir-ty/tests/jls_release_api.rs
expression: out
---
FILE /src/com/example/ApiUse.java:
package com.example;

class ApiUse {
    void f(java.util.Api a) {
        a.newer();
        String s = java.util.Api.FIELD;
        java.util.Api b = new java.util.Api(1);
    }
}
