crates/hir-ty/tests/snapshots/jls_release_api__method_reference_added_later_at_8_is_reported.snap
---
source: crates/hir-ty/tests/jls_release_api.rs
expression: out
---
FILE /src/com/example/RefUse.java:
package com.example;

class RefUse {
    java.util.function.Supplier<String> s;
    void f(java.util.Api a) {
        s = a::newer;
    }
}

@5:12: api-not-supported-in-release: method 'newer()' in 'java.util.Api' is not supported in release 8 (added in release 11)
