crates/hir-ty/tests/snapshots/jls_release_api__release_above_the_archive_reports_nothing.snap
---
source: crates/hir-ty/tests/jls_release_api.rs
expression: out
---
FILE /src/com/example/LaterUse.java:
package com.example;

class LaterUse {
    java.util.Later l;
}
